--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "@tailwindcss/forms": "^0.5.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "autoprefixer": "^10.4.0",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "postcss": "^8.4.0",
+        "postcss-nesting": "^12.0.0",
+        "tailwindcss": "^3.0.0",
+        "vite": "^5.4.0"
     }
 }
